General Idea out as modular code

--- a/ConceptNet_Features.ipynb
+++ b/ConceptNet_Features.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ConceptNet_Features.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyME76uqbCgiuh+gH1/EeDko",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNtxTarBl1kCvUn7+OnB3oM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +28,172 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ijlG0K3eIRuP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AeBNy2OjIs0j",
+        "outputId": "f2bf195a-9b12-46d3-ac03-aafa5cb47bbf"
       },
       "source": [
-        ""
+        "import pickle\r\n",
+        "import string\r\n",
+        "import nltk\r\n",
+        "nltk.download('punkt')\r\n",
+        "import requests\r\n",
+        "import re"
       ],
-      "execution_count": null,
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ijlG0K3eIRuP",
+        "outputId": "d26d1309-432c-477d-82cd-08088101433a"
+      },
+      "source": [
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "81u94u6dInNg"
+      },
+      "source": [
+        "with open('/content/gdrive/My Drive/iemocap/train/sentences.pkl', 'rb') as f:\r\n",
+        "    data = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/train/labels.pkl', 'rb') as f:\r\n",
+        "    labels = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/sentences.pkl', 'rb') as f:\r\n",
+        "    test_data = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\r\n",
+        "    test_labels = pickle.load(f)"
+      ],
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S0Bh6jNmIyUl"
+      },
+      "source": [
+        "def preprocessing(data,labels):\r\n",
+        "  processed_data=[]\r\n",
+        "  processed_label=[]\r\n",
+        "  for i in range(0,len(data)):\r\n",
+        "    for j in range(0,len(data[i])):\r\n",
+        "      intermediate_data=[]\r\n",
+        "      intermediate_label=[]\r\n",
+        "      for k in range(0,len(data[i][j])):\r\n",
+        "        text=data[i][j][k]\r\n",
+        "        if text != '<eos>'and text!='<pad>':\r\n",
+        "          intermediate_data.append(text)\r\n",
+        "      processed_data.append(intermediate_data)\r\n",
+        "  for i in labels:\r\n",
+        "    for j in i:\r\n",
+        "      processed_label.append(j)\r\n",
+        "  return processed_data,processed_label"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-yco_VAfIzgu"
+      },
+      "source": [
+        "processed_data,processed_label = preprocessing(data,labels)\r\n",
+        "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fa8KcKu8I4rk"
+      },
+      "source": [
+        "for i in range(0,len(processed_data)):\r\n",
+        "  processed_data[i]= ' '.join(processed_data[i])\r\n",
+        "for i in range(0,len(test_processed_data)):\r\n",
+        "  test_processed_data[i]=' '.join(test_processed_data[i])"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D0KuorJkKute"
+      },
+      "source": [
+        "conceptnet_data=[]\r\n",
+        "temp=processed_data[0]\r\n",
+        "vars=temp.translate(str.maketrans('', '', string.punctuation))\r\n",
+        "tokens=nltk.word_tokenize(vars)\r\n",
+        "for i in tokens:\r\n",
+        "  obj = requests.get('http://api.conceptnet.io/related/c/en/' + i + '?filter=/c/en').json()\r\n",
+        "  for j in range(1,3):\r\n",
+        "    var=obj['related'][j]['@id']\r\n",
+        "    ans=re.sub(r'[^\\w]', ' ', var)\r\n",
+        "    ans=ans[6:]\r\n",
+        "    conceptnet_data.append(ans)\r\n",
+        "for i in conceptnet_data:\r\n",
+        "  processed_data[0]=processed_data[0]+\" \"+str(i)"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YxW80LhUKal5",
+        "outputId": "0f340721-e817-44b0-96d6-e3b876c88231"
+      },
+      "source": [
+        "def add_ConceptNet_Features(data):\r\n",
+        "  for i in data:"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4699\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
