Updated ConceptNet Features Function

--- a/BERT_on_IEMOCAP_for_ERC.ipynb
+++ b/BERT_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BERT_on_IEMOCAP_for_ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIAGpIbFjQIiq7dCXYiAV9",
+      "authorship_tag": "ABX9TyMthBBpU7CKt2tGWESv9IMh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -302,11 +302,13 @@
       },
       "source": [
         "def add_ConceptNet_Features(data):\r\n",
+        "  print(len(data))\r\n",
         "  for sentences in range(0,len(data)):\r\n",
         "    print(sentences)\r\n",
         "    conceptnet_data=[]\r\n",
         "    cleaned_sentences=data[sentences].translate(str.maketrans('', '', string.punctuation))\r\n",
-        "    tokens=nltk.word_tokenize(cleaned_sentences)\r\n",
+        "    tokens_with_sw=nltk.word_tokenize(cleaned_sentences)\r\n",
+        "    tokens= [word for word in tokens_with_sw if not word in stopwords.words()]\r\n",
         "    for i in tokens:\r\n",
         "      obj = requests.get('http://api.conceptnet.io/related/c/en/' + i + '?filter=/c/en').json()\r\n",
         "      for j in range(1,3):\r\n",
