Added a function to rearrange the sentences to create different batch sizes

--- a/BERT_on_IEMOCAP_for_ERC.ipynb
+++ b/BERT_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BERT_on_IEMOCAP_for_ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNwQZAz0Hdam9xjn2rhZ5Ck",
+      "authorship_tag": "ABX9TyPFn9qTslGnsEYeXFDQC81J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -207,7 +207,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7c6137e-8408-4b3d-f600-c9e170b1749a"
+        "outputId": "4d72c6ed-4256-4c99-f2a5-1c731dca8d69"
       },
       "source": [
         "from google.colab import drive\n",
@@ -263,9 +263,39 @@
         "with open('/content/gdrive/My Drive/iemocap/test/sentences.pkl', 'rb') as f:\n",
         "    test_data = pickle.load(f)\n",
         "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\n",
-        "    test_labels = pickle.load(f)"
+        "    test_labels = pickle.load(f)\n",
+        "with open('/content/gdrive/MyDrive/iemocap/train/conversation_length.pkl', 'rb') as f:\n",
+        "    train_convlen = pickle.load(f)\n",
+        "with open('/content/gdrive/MyDrive/iemocap/test/conversation_length.pkl', 'rb') as f:\n",
+        "    test_convlen = pickle.load(f)"
       ],
       "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qL9CPBNhRTJg"
+      },
+      "source": [
+        "def arrange_sentences(data,data2):\r\n",
+        "  startlen=0\r\n",
+        "  final_sentences=[]\r\n",
+        "  for i in data:\r\n",
+        "    print(i)\r\n",
+        "    odd_sentences=[]\r\n",
+        "    for j in range(0,i):\r\n",
+        "      if j%2==0:\r\n",
+        "        final_sentences.append(data2[startlen])\r\n",
+        "        startlen=startlen+1\r\n",
+        "      else:\r\n",
+        "        odd_sentences.append(data2[startlen])\r\n",
+        "        startlen=startlen+1\r\n",
+        "    for i in odd_sentences:\r\n",
+        "      final_sentences.append(i)\r\n",
+        "  return final_sentences"
+      ],
+      "execution_count": 15,
       "outputs": []
     },
     {
