Rearranged Sentences code. Change batch_size in creating model cell.

--- a/BERT_on_IEMOCAP_for_ERC.ipynb
+++ b/BERT_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BERT_on_IEMOCAP_for_ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPFn9qTslGnsEYeXFDQC81J",
+      "authorship_tag": "ABX9TyOV2ddRO92hFB0iPZfWr7YF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,20 +231,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f045e6ee-b711-47df-c7fc-3952b4b271ed"
+        "outputId": "70e7e796-f766-4dcc-cd45-2b23d77238cf"
       },
       "source": [
         "%%time\n",
         "module_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-24_H-1024_A-16/1\"\n",
         "bert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 22.6 s, sys: 4.26 s, total: 26.9 s\n",
-            "Wall time: 41.3 s\n"
+            "CPU times: user 27.1 s, sys: 5.21 s, total: 32.3 s\n",
+            "Wall time: 48.1 s\n"
           ],
           "name": "stdout"
         }
@@ -295,7 +295,7 @@
         "      final_sentences.append(i)\r\n",
         "  return final_sentences"
       ],
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
         "      processed_label.append(j)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 9,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -333,7 +333,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 10,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -347,8 +347,158 @@
         "for i in range(0,len(test_processed_data)):\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 11,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dcDWjVAiTcUu",
+        "outputId": "9f26a4dd-015d-4616-8418-d64416606274",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "processed_data=arrange_sentences(train_convlen,processed_data)\r\n",
+        "test_processed_data=arrange_sentences(test_convlen,test_processed_data)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "52\n",
+            "37\n",
+            "28\n",
+            "18\n",
+            "57\n",
+            "87\n",
+            "38\n",
+            "77\n",
+            "35\n",
+            "26\n",
+            "53\n",
+            "32\n",
+            "54\n",
+            "47\n",
+            "26\n",
+            "50\n",
+            "26\n",
+            "51\n",
+            "33\n",
+            "53\n",
+            "43\n",
+            "53\n",
+            "40\n",
+            "72\n",
+            "34\n",
+            "110\n",
+            "60\n",
+            "64\n",
+            "47\n",
+            "54\n",
+            "46\n",
+            "26\n",
+            "62\n",
+            "34\n",
+            "63\n",
+            "40\n",
+            "66\n",
+            "66\n",
+            "53\n",
+            "79\n",
+            "26\n",
+            "47\n",
+            "45\n",
+            "45\n",
+            "18\n",
+            "56\n",
+            "83\n",
+            "50\n",
+            "37\n",
+            "47\n",
+            "74\n",
+            "41\n",
+            "47\n",
+            "34\n",
+            "59\n",
+            "51\n",
+            "69\n",
+            "27\n",
+            "63\n",
+            "54\n",
+            "54\n",
+            "24\n",
+            "44\n",
+            "60\n",
+            "47\n",
+            "35\n",
+            "60\n",
+            "26\n",
+            "63\n",
+            "27\n",
+            "39\n",
+            "46\n",
+            "20\n",
+            "35\n",
+            "51\n",
+            "53\n",
+            "61\n",
+            "69\n",
+            "51\n",
+            "42\n",
+            "42\n",
+            "29\n",
+            "52\n",
+            "38\n",
+            "62\n",
+            "78\n",
+            "69\n",
+            "56\n",
+            "8\n",
+            "61\n",
+            "94\n",
+            "53\n",
+            "26\n",
+            "59\n",
+            "58\n",
+            "42\n",
+            "52\n",
+            "34\n",
+            "59\n",
+            "44\n",
+            "28\n",
+            "68\n",
+            "29\n",
+            "52\n",
+            "59\n",
+            "75\n",
+            "49\n",
+            "43\n",
+            "91\n",
+            "43\n",
+            "83\n",
+            "23\n",
+            "84\n",
+            "44\n",
+            "54\n",
+            "83\n",
+            "28\n",
+            "58\n",
+            "58\n",
+            "64\n",
+            "43\n",
+            "42\n",
+            "53\n",
+            "59\n",
+            "44\n",
+            "37\n",
+            "40\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -356,24 +506,24 @@
         "id": "qd0vwdjxYgbX"
       },
       "source": [
-        "def add_ConceptNet_Features(data):\r\n",
-        "  print(len(data))\r\n",
-        "  for sentences in range(0,len(data)):\r\n",
-        "    print(sentences)\r\n",
-        "    conceptnet_data=[]\r\n",
-        "    cleaned_sentences=data[sentences].translate(str.maketrans('', '', string.punctuation))\r\n",
-        "    tokens_with_sw=nltk.word_tokenize(cleaned_sentences)\r\n",
-        "    tokens= [word for word in tokens_with_sw if not word in stopwords.words()]\r\n",
-        "    for i in tokens:\r\n",
-        "      obj = requests.get('http://api.conceptnet.io/related/c/en/' + i + '?filter=/c/en').json()\r\n",
-        "      for j in range(1,3):\r\n",
-        "        response=obj['related'][j]['@id']\r\n",
-        "        response=re.sub(r'[^\\w]', ' ', response)\r\n",
-        "        response=response[6:]\r\n",
-        "        conceptnet_data.append(response)\r\n",
-        "    for i in conceptnet_data:\r\n",
-        "      data[sentences]=data[sentences]+\" \"+str(i)\r\n",
-        "  return data"
+        "# def add_ConceptNet_Features(data):\r\n",
+        "#   print(len(data))\r\n",
+        "#   for sentences in range(0,len(data)):\r\n",
+        "#     print(sentences)\r\n",
+        "#     conceptnet_data=[]\r\n",
+        "#     cleaned_sentences=data[sentences].translate(str.maketrans('', '', string.punctuation))\r\n",
+        "#     tokens_with_sw=nltk.word_tokenize(cleaned_sentences)\r\n",
+        "#     tokens= [word for word in tokens_with_sw if not word in stopwords.words()]\r\n",
+        "#     for i in tokens:\r\n",
+        "#       obj = requests.get('http://api.conceptnet.io/related/c/en/' + i + '?filter=/c/en').json()\r\n",
+        "#       for j in range(1,3):\r\n",
+        "#         response=obj['related'][j]['@id']\r\n",
+        "#         response=re.sub(r'[^\\w]', ' ', response)\r\n",
+        "#         response=response[6:]\r\n",
+        "#         conceptnet_data.append(response)\r\n",
+        "#     for i in conceptnet_data:\r\n",
+        "#       data[sentences]=data[sentences]+\" \"+str(i)\r\n",
+        "#   return data"
       ],
       "execution_count": 32,
       "outputs": []
@@ -384,8 +534,8 @@
         "id": "K2cUeGj5YhRn"
       },
       "source": [
-        "processed_data=add_ConceptNet_Features(processed_data)\r\n",
-        "test_processed_data = add_ConceptNet_Features(test_processed_data)"
+        "# processed_data=add_ConceptNet_Features(processed_data)\r\n",
+        "# test_processed_data = add_ConceptNet_Features(test_processed_data)"
       ],
       "execution_count": null,
       "outputs": []
@@ -410,7 +560,7 @@
         "Y=to_categorical(processed_label, num_classes=6)\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 12,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -423,7 +573,7 @@
         "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
         "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
       ],
-      "execution_count": 13,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -437,64 +587,25 @@
         "train_labels = Y\n",
         "test_labels = test_Y"
       ],
-      "execution_count": 14,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bYSK8AjpRYPx",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "aa9cd173-440e-4602-9743-f406fae0ee12"
+        "id": "bYSK8AjpRYPx"
       },
       "source": [
         "model = build_model(bert_layer, max_len=160)\n",
         "model.summary()"
       ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Model: \"model\"\n",
-            "__________________________________________________________________________________________________\n",
-            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-            "==================================================================================================\n",
-            "input_word_ids (InputLayer)     [(None, 160)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "input_mask (InputLayer)         [(None, 160)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "segment_ids (InputLayer)        [(None, 160)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "keras_layer (KerasLayer)        [(None, 1024), (None 335141889   input_word_ids[0][0]             \n",
-            "                                                                 input_mask[0][0]                 \n",
-            "                                                                 segment_ids[0][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "dense (Dense)                   (None, 100)          102500      keras_layer[0][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_1 (Dense)                 (None, 100)          10100       dense[0][0]                      \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_2 (Dense)                 (None, 6)            606         dense_1[0][0]                    \n",
-            "==================================================================================================\n",
-            "Total params: 335,255,095\n",
-            "Trainable params: 335,255,094\n",
-            "Non-trainable params: 1\n",
-            "__________________________________________________________________________________________________\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "99O-dUk_Ra5y",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "469ba6ca-244d-49ec-9419-7c09a80e4709"
+        "id": "99O-dUk_Ra5y"
       },
       "source": [
         "train_history = model.fit(\n",
@@ -505,27 +616,8 @@
         "\n",
         "model.save('model.h5')"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/6\n",
-            "4699/4699 [==============================] - 879s 169ms/step - loss: 0.4373 - accuracy: 0.2838\n",
-            "Epoch 2/6\n",
-            "4699/4699 [==============================] - 796s 169ms/step - loss: 0.3122 - accuracy: 0.5995\n",
-            "Epoch 3/6\n",
-            "4699/4699 [==============================] - 795s 169ms/step - loss: 0.2163 - accuracy: 0.7756\n",
-            "Epoch 4/6\n",
-            "4699/4699 [==============================] - 794s 169ms/step - loss: 0.1578 - accuracy: 0.8459\n",
-            "Epoch 5/6\n",
-            "4699/4699 [==============================] - 795s 169ms/step - loss: 0.1150 - accuracy: 0.8835\n",
-            "Epoch 6/6\n",
-            "4699/4699 [==============================] - 797s 170ms/step - loss: 0.0951 - accuracy: 0.9041\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -535,17 +627,13 @@
       "source": [
         "y_pred=model.predict(test_input, batch_size=1)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ifq6GS_ylKXA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ad29a119-b6cf-4d72-bc37-923c5cf7e1a8"
+        "id": "ifq6GS_ylKXA"
       },
       "source": [
         "y_pred1=np.argmax(y_pred,axis=1)\n",
@@ -553,17 +641,8 @@
         "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\n",
         "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
       ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Accuracy : 0.5508317929759704\n",
-            "Weighted F1-score : 0.5450525028904043\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
